Property/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Room__c</fullName>
        <label>Additional Room</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Vijayawada</fullName>
                </value>
                <value>
                    <fullName>Vishakapatnam</fullName>
                </value>
                <value>
                    <fullName>Ananthapur</fullName>
                </value>
                <value>
                    <fullName>Warangal</fullName>
                </value>
                <value>
                    <fullName>Bhubaneswar</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_From__c</fullName>
        <label>Available From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carpet_area_sqft__c</fullName>
        <label>Carpet area sqft</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Covered_area_sqft__c</fullName>
        <label>Covered area sqft</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electricity_Status__c</fullName>
        <label>Electricity Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facing__c</fullName>
        <label>Facing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_Bachellor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Bachellor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furnished_Type__c</fullName>
        <label>Furnished Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fully furnished</fullName>
                </value>
                <value>
                    <fullName>Semi furnished</fullName>
                </value>
                <value>
                    <fullName>unfurnished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furnishning_Available__c</fullName>
        <label>Furnishning Available</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geo_Map__c</fullName>
        <label>Geo Map</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IsSold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <label>Landmark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintainance_Charge__c</fullName>
        <label>Maintainance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Of_Bath_Room__c</fullName>
        <label>No Of Bath Room</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Bed_Room__c</fullName>
        <label>No Of Bed Room</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Balcony__c</fullName>
        <label>No of Balcony</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_email__c</fullName>
        <formula>Property_Owner__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Description__c</fullName>
        <label>Property Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Main_Image__c</fullName>
        <label>Property Main Image</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Property_Owner__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Video_URL__c</fullName>
        <label>Property Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Odisha</fullName>
                </value>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Tamilnadu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Availability__c</fullName>
        <label>Water Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carousel_image1__c</fullName>
        <label>carousel image1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>carousel_image2__c</fullName>
        <label>carousel image2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>carousel_image3__c</fullName>
        <label>carousel image3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Additional_Room__c</columns>
        <columns>Area__c</columns>
        <columns>Available_From__c</columns>
        <columns>Carpet_area_sqft__c</columns>
        <columns>Covered_area_sqft__c</columns>
        <columns>Electricity_Status__c</columns>
        <columns>Facing__c</columns>
        <columns>Rent__c</columns>
        <columns>IsSold__c</columns>
        <columns>Floor__c</columns>
        <columns>For_Bachellor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>